# rs_axum_tutorial

./: Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs
src/data/: .env  helper.rs  main.rs
src/data/database/: mod.rs  prelude.rs  tasks.rs  users.rs
src/data/routes/: create_task.rs  create_user.rs  custom_json_extractor.rs  delete_task.rs  gaurd.rs  get_tasks.rs  mod.rs  partial_update_tasks.rs  update_tasks.rs  users.rs  validate_with_serde.rs
src/data/utils/: jwt.rs
src/routes/: always_errors.rs  hello_world.rs  middleware_message.rs  mirror_custom_headers.rs  mod.rs  returns_201.rs
src/routing/: errors.rs  helper.rs  main.rs
src/routing/routes/: custom_json_extractor.rs  get_json.rs  middleware_message.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  set_middleware_custom_header.rs  validate_with_serde.rs
