[package]
name = "axum_playlist"
version = "0.1.0"
edition = "2024"

[[bin]]
name="routing"
path="src/routing/main.rs"

[[bin]]
name="data"
path="src/data/main.rs"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.14", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
